@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.5.6) unstable; urgency=low
 
   * widget-http: send the "Via" request header instead of "X-Forwarded-For"
   * proxy-handler: send the "Via" request header
+  * widget-request: check the "path" argument before calling uri_compress()
 
  --
 
